--- a/gb/19/2/3/n11022591.md
+++ b/gb/19/2/3/n11022591.md
@@ -1,20 +1,19 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/tjvrql262/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/tjvrql262/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/tjvrql262/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/tjvrql262/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/hxcaik307/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>玉清心：物理大师束星北 一曲悲怆的挽歌</h2>
-<img width="600" src="https://i.epochtimes.com/assets/uploads/2019/02/4d32149bh8dc9e2ae8426690-600x331.jpg" />
-<h6>束星北（1907-1983）
-</h6>
+
+<h6></h6>
 <hr>
-<p>【大纪元2019年02月04日讯】很多人知道<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E6%9D%8E%E6%94%BF%E9%81%93.md#1">李政道</a>，却很少有人知道他的恩师<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E6%9D%9F%E6%98%9F%E5%8C%97.md#1">束星北</a>。如果不是《束星北档案——一个天才物理学家的命运》一书问世，掀开了封尘多年的档案，或许这位被业内人士称为“中国的爱因斯坦”，曾经启蒙培养过<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E6%9D%8E%E6%94%BF%E9%81%93.md#1">李政道</a>、吴健雄、程开甲等著名科学家的天才物理学家和杰出教育家，就真的往事如烟了。</p>
-<p>其实，早在四、五十年代，<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E6%9D%9F%E6%98%9F%E5%8C%97.md#1">束星北</a>在物理学界已如雷贯耳。1937年，世界物理界权威、丹麦物理学家、诺贝尔物理学奖获得者尼耳斯·玻尔受邀到访浙江大学。玻尔回国后不断有中国的师生写信向他请教如何学物理、如何出国深造。玻尔回信说，你们有束星北、王淦昌这样世界一流的物理学家在，你没有必要来欧洲留学。</p>
+	<p>【大纪元2019年02月04日讯】很多人知道<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E6%9D%8E%E6%94%BF%E9%81%93.md#1">李政道</a>，却很少有人知道他的恩师<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E6%9D%9F%E6%98%9F%E5%8C%97.md#1">束星北</a>。如果不是《束星北档案——一个天才物理学家的命运》一书问世，掀开了封尘多年的档案，或许这位被业内人士称为“中国的爱因斯坦”，曾经启蒙培养过<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E6%9D%8E%E6%94%BF%E9%81%93.md#1">李政道</a>、吴健雄、程开甲等著名科学家的天才物理学家和杰出教育家，就真的往事如烟了。</p>
+<p>其实，早在四、五十年代，<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E6%9D%9F%E6%98%9F%E5%8C%97.md#1">束星北</a>在物理学界已如雷贯耳。1937年，世界物理界权威、丹麦物理学家、诺贝尔物理学奖获得者尼耳斯·玻尔受邀到访浙江大学。玻尔回国后不断有中国的师生写信向他请教如何学物理、如何出国深造。玻尔回信说，你们有束星北、王淦昌这样世界一流的物理学家在，你没有必要来欧洲留学。</p>
 <p>1972年10月，美籍华裔物理学家、诺贝尔物理学奖得主李政道首次访华。周恩来在会见他时请他为解决中国教育人才的断层问题做点工作。李政道表示，中国并不缺乏教育人才，而是没有给他们发挥才能的机会，“比如，我的老师束星北就在国内”。</p>
 <h2>出生望族 自费留学欧美</h2>
 <p>束星北1907年出生在江苏扬州头桥镇安帖村。父亲束曰璐是江南陆师学堂优等毕业生，清末官至参领，民国时期任全国水利局主事，后为张謇企业的高级管理人员，在南通有自己的企业。父亲为人豪爽、热心，经常帮助有困难的人。束星北秉承了父亲的禀性。</p>
 <p>弟弟束佺保，四十年代曾任英文刊物《自由论坛》主编，弟妹是“国大代表”、宋美龄的秘书。</p>
 <p>1926年至1931年，束星北自费留学欧美，后奉母命回国完婚。</p>
 <h2>备受学生欢迎的物理教授</h2>
-<figure id="attachment_11022698" style="width: 377px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2019/02/bee7579cb5e7890fd83a288e918b905f.jpg"><img class="wp-image-11022698 size-full" src="https://i.epochtimes.com/assets/uploads/2019/02/bee7579cb5e7890fd83a288e918b905f.jpg" alt="" width="377" b="450" /></a><figcaption class="wp-caption-text">图左是束星北，图右是王淦昌。</figcaption></figure>
+<figure id="attachment_11022698" aria-describedby="caption-attachment-11022698" style="width: 377px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2019/02/bee7579cb5e7890fd83a288e918b905f.jpg"><img class="wp-image-11022698 size-full" src="https://i.epochtimes.com/assets/uploads/2019/02/bee7579cb5e7890fd83a288e918b905f.jpg" alt="" width="377" b="450" /></a><figcaption id="caption-attachment-11022698" class="wp-caption-text">图左是束星北，图右是王淦昌。</figcaption></figure>
 <p>同为物理教授的王淦昌说，“束星北的教学经验很丰富，我对他的教授方法，非常钦佩。他既不用课文，也不写讲义，常常结合日常生活中所遇到的事物深入浅出地讲解所学的新概念、原理等，讲得非常透彻，学生们都很爱听他讲的课，这一点是我无论如何也学不来的。”</p>
 <p>李政道1943年考上了浙江大学的化工系，开学前一个月，他拜访了浙大物理系教授束星北，同时也认识了王淦昌教授。当时他16岁，对工科和理科的认识很不清楚，慢慢地和二位物理教授接触多了，逐渐了解了物理学科的意义和重要，物理对他产生了很强的吸引力。一个月后，当他去永兴上学的时候就决定由化工系转为物理系了。每一两周束星北从湄潭专程到永兴来一天，和物理系的同学讨论。在一对一师生密切教学的关系下，束老师“帮助我建立了对整体物理的认识、了解和自信，使我一生受益”。李政道在为《束星北档案》写的序言中说：“想起他非凡的科学气质和为人品格，心里真有说不出的感觉。”</p>
 <h2>“中国雷达之父” 日后成了“历史反革命”</h2>
@@ -51,7 +50,7 @@
 <p>1955年肃反运动，他遭停职审查。随着揭批“胡风反革命集团”升级，束星北被打成“束星北反党集团头目”。一些与他走得近的教授们，都成了他的反革命集团成员。来抄家的人，翻东西、砸墙，看看有没有电台、枪支。束星北手里举着一本《中华人民共和国宪法》对搜查人员说，公民住宅不得侵犯。</p>
 <p>他用《宪法》捍卫人权，招致了更大的迫害。妻子被拉出来和他一起遭受体罚批斗。最后他终因不堪其辱，选择了服毒自杀，却因服错了药没有成仁。</p>
 <h2>因“用生命维护宪法的尊严”言论 被打成“极右分子”</h2>
-<figure id="attachment_11022703" style="width: 500px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2019/02/1783e7e61cfb2225d271cc19db1d6d7b.jpg"><img class="wp-image-11022703 size-full" src="https://i.epochtimes.com/assets/uploads/2019/02/1783e7e61cfb2225d271cc19db1d6d7b.jpg" alt="" width="500" b="311" /></a><figcaption class="wp-caption-text">1957年，束星北全家。</figcaption></figure>
+<figure id="attachment_11022703" aria-describedby="caption-attachment-11022703" style="width: 500px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2019/02/1783e7e61cfb2225d271cc19db1d6d7b.jpg"><img class="wp-image-11022703 size-full" src="https://i.epochtimes.com/assets/uploads/2019/02/1783e7e61cfb2225d271cc19db1d6d7b.jpg" alt="" width="500" b="311" /></a><figcaption id="caption-attachment-11022703" class="wp-caption-text">1957年，束星北全家。</figcaption></figure>
 <p>1957年5月，反右运动“鸣放”期，他在山东省委宣传工作会议上作了《用生命维护宪法的尊严》的发言，演讲被二十多次掌声打断，引起在场知识界的强烈共鸣。他认为，歌颂“人”，不歌颂“宪法”，是“人治”而不是“法治”，那将很危险。“即使毛XX也不能保证没有偶然的错误”。他被多次要求做检查，但他不承认有错。</p>
 <h2>三年大饥荒期间 他在水库工地劳改</h2>
 <p>1958年，他被定为“极右分子”和“历史反革命分子”，受到“管制劳动”三年的处分。历史反革命罪名的依据，是“雷达之父”那段历史。</p>
@@ -76,7 +75,7 @@
 <p>在青岛医学院，束星北的办公室是“门卫室”（以前叫：门房儿或传达室）。他是涮茅房的“老束头”，聚在那里的都是干粗活的，看大门、看洗澡溏的，烧锅炉的，拉大车的，他们都成了他的同事和朋友。他被彻底边缘化了，踩在了社会底层。</p>
 <p>束星北少年时代，偶然间读到一部关于四度空间的科幻小说，让他开始迷恋于物理世界的神奇，并确定献身物理科学的人生志向。</p>
 <p>离开浙大后，他被纠缠在没完没了的运动中，科学研究的大门在他面前被慢慢关上，58年后被无情地全部关闭。这对以科学救国为己任、以探索物理世界奥秘为人生理想的一位杰出科学家来说，无异于扼杀了他的生命。</p>
-<figure id="attachment_11022682" style="width: 600px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2019/02/9c6b4f3422085f7c2ddf7c5496f14f30.jpg"><img class="wp-image-11022682 size-large" src="https://i.epochtimes.com/assets/uploads/2019/02/9c6b4f3422085f7c2ddf7c5496f14f30-600x436.jpg" alt="" width="600" b="436" /></a><figcaption class="wp-caption-text">束美新和父母。</figcaption></figure>
+<figure id="attachment_11022682" aria-describedby="caption-attachment-11022682" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2019/02/9c6b4f3422085f7c2ddf7c5496f14f30.jpg"><img class="wp-image-11022682 size-large" src="https://i.epochtimes.com/assets/uploads/2019/02/9c6b4f3422085f7c2ddf7c5496f14f30-600x436.jpg" alt="" width="600" b="436" /></a><figcaption id="caption-attachment-11022682" class="wp-caption-text">束美新和父母。</figcaption></figure>
 <p>女儿束美新说，父亲的追求很简单，只希望能有一个安静的教学环境和研究环境。他多次表达了不能工作的痛苦，但却纠缠在没完没了的政治运动中。对他来说，最怕的不是政治压力，而是不让做事情，做事情才是活下去的理由。他做具体工作的时候，就把外面的烦恼都淡化了。</p>
 <p>岁月无情地流逝，束星北内心的焦虑与日俱增，在多次在思想汇报中，他请求能发挥一技之长。</p>
 <p>1971年，64岁时，他又递上摘帽申请：如果再过十几年，即使改造好了，对党、对人民、对社会主义还能有什么用呢？……今后该怎么办，才能得到党和人民的宽恕、谅解和容纳？……恳请党领导、军工宣队能拉我一把，在我未死之前。</p>
@@ -90,7 +89,7 @@
 <p>1972年2月，尼克松总统访华，签署了《上海公报》。当年10月，李政道首次回国对周恩来提到他的老师束星北，这不能不引起周的重视。那时，中共急于和美国建交，需要名人效应给自己涂脂抹粉，更想拉拢他们，于是束星北问题被提到议事日程。果然，一年多后，束星北“摘帽”了，但“落实政策”是在1979年。</p>
 <p>学生李正道成为老师束星北转运的“贵人”，这已是中国物理学界的美谈。但是，谁都能从这份温馨中，感受到一股寒意。中共出于政治需要，放了束星北一码。而如果没有李政道的出现，“老束头”会一直在学院大门口的“门卫室”呆下去。</p>
 <h2>忧国忧民 甘做“人梯”</h2>
-<figure id="attachment_11022679" style="width: 600px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2019/02/ad0fb4dd3c70a326cd18187875310f64.jpg"><img class="wp-image-11022679 size-large" src="https://i.epochtimes.com/assets/uploads/2019/02/ad0fb4dd3c70a326cd18187875310f64-600x399.jpg" alt="" width="600" b="399" /></a><figcaption class="wp-caption-text">束星北在课堂上。</figcaption></figure>
+<figure id="attachment_11022679" aria-describedby="caption-attachment-11022679" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2019/02/ad0fb4dd3c70a326cd18187875310f64.jpg"><img class="wp-image-11022679 size-large" src="https://i.epochtimes.com/assets/uploads/2019/02/ad0fb4dd3c70a326cd18187875310f64-600x399.jpg" alt="" width="600" b="399" /></a><figcaption id="caption-attachment-11022679" class="wp-caption-text">束星北在课堂上。</figcaption></figure>
 <p>1978年，束星北到国家海洋局一所从事动力海洋的研究。1983年在青岛去世。在生命的最后五年，他主持了“动力海洋学进修班”，培养了一批动力海洋方面的科技骨干和高级研究人才，还对海洋内波进行了开拓性研究。 1979年，七机部准备在公海试射东风五号，需要计算弹头落入大洋打捞数据舱的最佳安全时限。束星北仅凭小计算器就完成了。</p>
 <p>年逾七旬的束星北，尽管“宝刀不老”，但他冷静地给自己调整了工作方向，定位为“作人梯”， 这正是束星北的过人之处。女儿说过父亲的高风亮节，“他永远把整个民族整个国家的利益看得高于他的生命，认为人在乎自身的得失是没有出息的。他是位科学家，应该把自己的才华和本事奉献给民族和国家”。 束星北是这样说的，也是这样做的。这次选择，就像当年抗战为打日寇，他放下了能出成就的理论物理研究，去研制雷达一样。</p>
 <p>束星北看到，中国要想追赶世界科技水平，需要一支有深厚理论基础的学术队伍。于是，他组建了有28位科研人员参加的“动力海洋学进修班”，凭自拟的提纲亲自授课、答疑、辅导、批改作业。</p>
@@ -109,53 +108,51 @@
 <p>然而中共的红色政权不容他。在经过十多年的劳动改造后，他问：“今后该怎么办，才能得到党和人民的宽恕、谅解和容纳？”他的呼喊无人理睬，中共不宽恕、不谅解他，“新中国”不容纳他。在中共体制下，束星北这样的正义之士没有生存空间，他前面的路和门都会被封堵。</p>
 <p>学生于良哀叹：“束星北没有任何错，只是早生了七十年。”束星北确实生不逢时，让他赶上了中共窃政年代。然而，晚生七十年又如何？他的情怀、才华能得以舒展畅行？答案肯定照样不行，一样会有悲剧发生！杀人害人的中共正在历史舞台上做最后疯狂表演，还在编篡恶剧推出上演。华裔物理家张首晟跳楼自杀事件，不就是中共导演的一出新悲剧吗？让人欲哭无泪！</p>
 <p>《档案》作者刘海军感叹：“束星北身上最饱满的地方，恰恰是中国当代知识分子身上最贫瘠的地方。”作为科学家，他有非凡的科学气质；作为知识分子，他有非凡的为人品质。束星北称得上是位大师级的物理学家，他在中国当代知识分子中，堪称江河一粟。</p>
-<p>束星北的悲剧人生，是中共残害中国<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E6%96%87%E5%8C%96%E7%B2%BE%E8%8B%B1.md#1">文化精英</a>的一个缩影，是我们应该吟诵给后人的一曲悲怆的挽歌。</p>
+<p>束星北的悲剧人生，是中共残害中国<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E6%96%87%E5%8C%96%E7%B2%BE%E8%8B%B1.md#1">文化精英</a>的一个缩影，是我们应该吟诵给后人的一曲悲怆的挽歌。</p>
 <p>参考资料<br />
 刘海军：《束星北档案——一个天才物理学家的悲剧》<br />
 许水涛：《束星北：在政治运动中消耗的天才物理学家》</p>
 <p>责任编辑：高义</p>
-
+	
 <hr>
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/18/5/20/n10411411.md#1">林辉：老海归一辈子最后悔的事就是回国</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/17/11/30/n9909227.md#1">邢小群：束星北的悲剧</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/16/8/5/n8172698.md#1">张东园：中共迫害文化精英实录（五）</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/9/12/8/n2747605.md#1">《李政道传》再曝与杨振宁恩怨</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/5/6/18/n958137.md#1">束星北－－“孤岛”上活下来的天才</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/5/4/20/n894987.md#1">赵健雄：天才束星北的命运及启示</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/2/2/27/n173092.md#1">李政道：中国古代的物理学</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/2/2/27/n173092.md#1">李政道：中国古代的物理学</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/5/4/20/n894987.md#1">赵健雄：天才束星北的命运及启示</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/5/6/18/n958137.md#1">束星北－－“孤岛”上活下来的天才</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/9/12/8/n2747605.md#1">《李政道传》再曝与杨振宁恩怨</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11935263.md#1">澳医学协会西澳主席：学校将关闭</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/12/7/n11707614.md#1" target="_blank">宁静：刘三姐到底是“歌仙”还是红卫兵？</a></li><li><a href="https://github.com/tjvrql262/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank">加拿大总理的贺信</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/9/23/n9661042.md#1" target="_blank">修大法顽疾遁无形 做好人春风化雨润无声</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank">中共迫害良心律师</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/8/26/n11477432.md#1" target="_blank">共产暴政录：李大钊被绞死的真正原因</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/15/11/14/n4573690.md#1" target="_blank">一位留美华裔女生绝处逢生的经历</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/14/n11940988.md#1">【最新疫情3.15】美确诊3244例 美联储再降息</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/15/n11942675.md#1">任志强失联4天 其好友求救外媒向中共施压</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/15/n11942373.md#1">图证蝗虫大军肆虐 中共急定预案恐难应对</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/15/n11942229.md#1">大陆原卫生高官：疫情恐再爆发 谎言将破灭</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/2/18/n11877949.md#1">古今中外预言中的2020年</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/9/n11926997.md#1">中国等国为何疫情严重？犹太拉比：神在除恶</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/2/29/n11905232.md#1">蝗虫群攻官府异象 为何吃尽画像人头？</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/9/n11925830.md#1">被扒皮的法官</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/14/n11940920.md#1">荷兰科学家首发现武汉病毒抗体 药物快过疫苗</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/14/n11940024.md#1">“郑州毒王”隐瞒旅游史 恐影响全球近4万人</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/14/n11939304.md#1">武汉失踪青年达数百人 警方不作为（上）</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/14/n11939218.md#1">【十字路口】中共遇末日3危机 4骗术激怒世界</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/14/n11939240.md#1">【拍案惊奇】美军带毒到武汉？中共假话遭批</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/14/n11941017.md#1">【现场视频】东莞虎门镇现大量防暴警察</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/13/n11938952.md#1">疫情下范冰冰晒自拍 出门戴双层口罩引围观</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/15/n11942589.md#1">赵立坚甩锅病毒源自美国 艺人黄秋生狠酸中共</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/13/n11938685.md#1">梁朝伟赴澳洲拍漫威片《上气》剧组全面停工</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/15/n11942415.md#1">西班牙疫情大爆发 梁咏琪一家三口封城前返港</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/15/n11942781.md#1">潘迎紫呼吸道感染急就医 被要求检测新冠病毒</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/14/n13576716.md#1">【百年真相】亲历者揭秘“1952细菌战”真相</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/25/n13605590.md#1">【未解之谜】地球磁极倒转进行中??</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610168.md#1">【神韵作品】唐瑞讲故事｜朗读｜小熊维尼第一章</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/22/n13597113.md#1">【百年真相】现代文字狱 胡风如何成了反革命？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/17/n13582752.md#1">【奇事】两位卜算大师看出对方死期 但两人皆无法避过</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614863.md#1">《梁祝》小提琴协奏曲</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13615078.md#1">刘凯文：香港抗疫政策混乱 遗体滞留急症室</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614595.md#1">【直播】俄乌大战 拜登首次国情咨文演说</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607661.md#1">【更新2.27】乌总统：接下来24小时至关重要</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610320.md#1">乌克兰用无人机摧毁俄导弹系统 视频曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609576.md#1">俄银行被切断SWIFT系统 中共角色更尴尬</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609572.md#1">纳豆或暂退萤光幕一年 经纪人曝他最新病况</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609465.md#1">看海狮资料一目十行过目不忘 杨幂展超强记忆力</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612216.md#1">港星吴孟达过世一周年 长眠大马原因曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614510.md#1">香港TVB艺人祝文君罹癌离世 终年55岁</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612151.md#1">TVB视后胡定欣确诊 陈豪吓得睡觉都戴口罩</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612112.md#1">更强Omicron变种出现？致病性、传播力一次看</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/23/n13599631.md#1">疫苗、口罩难结束疫情 这一件事或成关键</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607140.md#1">睡眠十大好处 提高脑力、抗衰老都在内</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13608014.md#1">多吃橙色食物 不只护眼 还有这些强大好处</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13607888.md#1">调查：十对夫妻中三对存在“财务不忠”</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/tjvrql262/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/tjvrql262/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/19/2/3/n11022591.htm">玉清心：物理大师束星北 一曲悲怆的挽歌</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/19/2/3/n11022591.htm">玉清心：物理大师束星北 一曲悲怆的挽歌</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/tjvrql262/djy/blob/master/gb/19/2/3/n11022591.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/tjvrql262/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/tjvrql262/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/tjvrql262/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/hxcaik307/djy/blob/master/gb/19/2/3/n11022591.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
